--- a/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_person_bio.yml
+++ b/docroot/profiles/custom/stanford_profile/config/sync/field.field.node.stanford_person.su_casbs_person_bio.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.storage.node.su_casbs_person_bio
-    - filter.format.stanford_html
     - node.type.stanford_person
   module:
+    - allowed_formats
     - text
 id: node.stanford_person.su_casbs_person_bio
 field_name: su_casbs_person_bio
